# double-pendulum

./: .clang-format  .clang-tidy  .concatconfig  .gitignore  .gitmodules  CAUSTIC_ANALYSIS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_LOG.md  METRICS.md  Makefile  README.md  analyze_causticness.py  annotate.py  annotations.json  annotations_small.json  best_params.toml  config.toml  drops.txt  pyproject.toml  run.sh
archive/: oldmain.cpp  test.py
archive/audio/: bones.aac
config/: batch.toml  batch_template.toml  best_params.toml  comparison_test.toml  default.toml  fixed_max_test.toml  grid.toml  gui.toml  long_test.toml  perf.toml  presets.toml  templates.toml  test.toml  text_pools.toml
docs/: METRICS.md  metric_analysis.md  prediction_scoring_prompt.md  prediction_scoring_report.md
include/: analysis_tracker.h  batch_generator.h  boom_client.h  boom_detector.h  color.h  color_scheme.h  config.h  enum_strings.h  enum_utils.h  gl_renderer.h  headless_gl.h  music_manager.h  pendulum.h  post_process.h  preset_library.h  probe_results.h  renderer.h  simulation.h  simulation_data.h  variance_tracker.h  video_writer.h
include/metrics/: analyzer.h  boom_analyzer.h  boom_detection.h  causticness_analyzer.h  event_detector.h  metric_registry.h  metric_series.h  metrics_collector.h  metrics_init.h  metrics_view.h  probe_filter.h  probe_pipeline.h  signal_analyzer.h
include/optimize/: frame_detector.h  prediction_target.h  predictor_registry.h  score_predictor.h  target_evaluator.h
music/: database.json
scripts/: stability_report.R
src/: batch_generator.cpp  boom_detector.cpp  config.cpp  draw.h  gl_renderer.cpp  headless_gl.cpp  main.cpp  main_gui.cpp  main_metrics.cpp  main_optimize.cpp  main_stability.cpp  music_manager.cpp  pendulum.h  preset_library.cpp  simulation.cpp  simulation_data.cpp  video_writer.cpp
src/metrics/: boom_analyzer.cpp  causticness_analyzer.cpp  event_detector.cpp  metric_series.cpp  metrics_collector.cpp  metrics_view.cpp  probe_filter.cpp  probe_pipeline.cpp  signal_analyzer.cpp
src/pendulum_tools/: __init__.py  archive.py  batch_annotate.py  cli.py  config.py  constants.py  exceptions.py  logging.py  models.py  templates.py  uploader.py
src/pendulum_tools/music/: __init__.py  database.py  manager.py  weights.py
src/pendulum_tools/processing/: __init__.py  ffmpeg.py  motion.py  pipeline.py  subtitles_ass.py  templates.py  thumbnails.py
src/pendulum_tools/server/: __init__.py  app.py  processor.py  state.py  watcher.py
youtube-uploader/: README.md  pyproject.toml
youtube-uploader/config/: templates.toml  text_pools.toml
youtube-uploader/src/pendulum_uploader/: __init__.py  cli.py  models.py  templates.py  uploader.py
youtube-uploader/src/pendulum_uploader/processing/: __init__.py  effects.py  ffmpeg.py  motion.py  overlays.py  pipeline.py  templates.py
